fix section 1: fixes to include tables, title tables

--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -21,7 +21,7 @@ configurable pull-up/pull-down modes. -->
 <!-- - one SPI port with 8/16 bits word, also selectable speed -->
 - 最大２つの８ビット汎用IOポート
 <!-- - up to 2 x 8bit, General Purpose IO ports -->
-```
+- ```
 (プロジェクトルート)
 ├── doc（ドキュメントフォルダ）
 │   └── data（スクリーンショットなど）
@@ -129,11 +129,11 @@ GUI setup requires:
 $ make gui
 ```
 とすると`dist`と`build`ディレクトリが作られます。実行可能ファイルは`dist`に置かれます。
-```
+```{.sh}
 $ dist/TinyI2C
 ```
 で実行できます。筆者の環境ではWindows/Linux/OSXとも動作確認できていますが、うまくいかないときは
-```
+```{.sh}
 $ python gui/main.py
 ```
 と実行するとなにかヒントが出るかもしれません。
@@ -153,7 +153,7 @@ $ dist/TinyI2C
 
 +------------------------------------------------------------------------------+
 |これらのコマンド文字とパケットの構造はNXP社のインタフェースIC **`SC18IM700`** |
-|の仕様~~をパクっt~~にインスパイアされています。                               |
+|の仕様<sub>~~をパクっt~~</sub> に ___強く___ インスパイアされています。       |
 +------------------------------------------------------------------------------+
 
 <!-- # Command set and protocol
@@ -169,7 +169,7 @@ character there are several choices but ending(`tail`) is always `'P'`, 0x50 in 
   then searches first character of the packet whether if matches one of registered `head` character.
     - if it does not match with any of valid `head` the device returns
   "command is not implemented" return packet.
-- if valid head found it checks `plength-2` which is actual data packet length.
+- if valid head found it checks `plength - 2` which is actual data packet length.
     - if you send an invalid packet, the device returns "bad packet" return packet.
 
 ## I2C
@@ -184,8 +184,8 @@ character there are several choices but ending(`tail`) is always `'P'`, 0x50 in 
   - *Read*: read data in hex sting (0xAA -> "AA") separated by ',' and ends by `ok`
   - *Write*: `ok`
 
-
-- command packet: write 4 bytes to slave at 0x80(8bit)
+#### Write only case
+Table: command packet - write 4 bytes to slave at 0x80(8bit)
 
 `doc/Out/commandSandP.tmd`{.include}
 
@@ -195,33 +195,37 @@ character there are several choices but ending(`tail`) is always `'P'`, 0x50 in 
 | `'S'` |      `'80'`      |   `'04'`    |              `'=>:=;>:?'`               | `'P'` |
 | 0x53  |    0x38 0x30     |  0x30 0x34  | 0x3D 0x3E 0x3A 0x3D 0x3B 0x3E 0x3A 0x3F | 0x50  | -->
 
-- return packet
+Table: return packet
 
 | result | head  | delimiter | tail |
 |:------:|:-----:|:---------:|:----:|
 | sucess | "ACK" |     ,     | "ok" |
 |  fail  | "NAK" |     ,     | "ok" |
 
-- command packet: read 4 bytes from slave at 0x80(8bit)
+#### Read only case
+Table: command packet - read 4 bytes from slave at 0x80(8bit)
 
 | head | slave address(R\) | data length | tail |
 |:----:|:-----------------:|:-----------:|:----:|
 |  S   |     0x\_8 \_1     |  0x\_0 \_4  |  P   |
 
-- return packet
+Table: return packet
 
 | result | head  | delimiter |               data                | tail |
 |:------:|:-----:|:---------:|:---------------------------------:|:----:|
 | sucess | "ACK" |     ,     | actual data: "AA","BB","CC","DD", | "ok" |
 |  fail  | "NAK" |     ,     | dummy data: "C4","FE","E0","CA",  | "ok" |
 
-- command packet: write and read 4 bytes to/from slave at 0x80(8bit)
+#### Write and Read case
+Table: command packet - write and read 4 bytes to/from slave at 0x80(8bit)
 
-| head | slave address(W) | data length |       binary data to write       | repeated start | slave address(R\) | data length | tail |
+`doc/Out/commandSandP_SSP.tmd`{.include}
+
+<!-- | head | slave address(W) | data length |       binary data to write       | repeated start | slave address(R\) | data length | tail |
 |:----:|:----------------:|:-----------:|:--------------------------------:|:--------------:|:-----------------:|:-----------:|:----:|
-|  S   |    0x\_8 \_0     |  0x\_0 \_4  | 0x_D \_E \_A \_D \_B \_E \_A \_F |       S        |     0x\_8 \_1     |  0x\_0 \_4  |  P   |
+|  S   |    0x\_8 \_0     |  0x\_0 \_4  | 0x_D \_E \_A \_D \_B \_E \_A \_F |       S        |     0x\_8 \_1     |  0x\_0 \_4  |  P   | -->
 
-- return packet
+Table: return packet
 
 | result | head  | delimiter |               data                | tail |
 |:------:|:-----:|:---------:|:---------------------------------:|:----:|
@@ -229,7 +233,7 @@ character there are several choices but ending(`tail`) is always `'P'`, 0x50 in 
 |  fail  | "NAK" |     ,     | dummy data: "C4","FE","E0","CA",  | "ok" |
 
 ### `'C'` 0x43 change channel
-- you can select I2C channel by sending `'C'` and channel number `'0'`to`'3'` with `tail` char.
+You can select I2C channel by sending `'C'` and channel number `'0'`to`'3'` with `tail` char.
 
 | head | channel | tail |
 |:----:|:-------:|:----:|
@@ -241,19 +245,21 @@ character there are several choices but ending(`tail`) is always `'P'`, 0x50 in 
 ## SPI
 ### `'E'` 0x45 SPI transfer start
 
-- minimum plength=8
+Table: minimum plength = 8
 
 | head | data length(W) | data length(R\) | binary data to write | tail |
 |:----:|:--------------:|:---------------:|:--------------------:|:----:|
 |  E   |   0x\_0 \_1    |    0x\_0 \_0    |      0x\_D \_E       |  P   |
 
-- minimum plength=10(16bit)
+
+Table: minimum plength = 10 (16bit)
 
 | head | data length(W) | data length(R\) | binary data to write | tail |
 |:----:|:--------------:|:---------------:|:--------------------:|:----:|
 |  E   |   0x\_0 \_1    |    0x\_0 \_0    |   0x_D \_E \_A \_D   |  P   |
 
-- write and read
+
+Table: write and read
 
 | head | data length(W) | data length(R\) |       binary data to write       | tail |
 |:----:|:--------------:|:---------------:|:--------------------------------:|:----:|
@@ -281,12 +287,12 @@ This is a subset of [R/W commands](#internal-registers); only access GPIO's stat
 |:----:|:----:|:----:|
 |  I   | '0'  |  P   |
 |  I   | '1'  |  P   |
-
+<!--  -->
 | head | GPIO |   data    | tail |
 |:----:|:----:|:---------:|:----:|
 |  O   | '0'  | 0x\_A \_A |  P   |
 |  O   | '1'  | 0x\_A \_A |  P   |
-
+<!--  -->
 | register | name in python | purpose          |
 |:--------:|:--------------:|:-----------------|
 |    0     |   GPIO0_STAT   | status of GPIO 0 |
@@ -302,30 +308,34 @@ This is a subset of [R/W commands](#internal-registers); only access GPIO's stat
 ## Internal registers
 ### `'R'` 0x52 read internal register
 ### `'W'` 0x57 write to internal register
-- single register read
+
+Table: single register read
 
 | head | register | tail |
 |:----:|:--------:|:----:|
 |  R   |   '0'    |  P   |
 |  R   |   '1'    |  P   |
 
-- multi registers read
++--------------------------------------------------------+
+|return packet's order is same as command packet's order |
++--------------------------------------------------------+
+
+this is dummy message
+
+Table: multi registers read
 
 | head | register(1) | register(2) | ... | register(n) | tail |
 |:----:|:-----------:|:-----------:|:---:|:-----------:|:----:|
 |  R   |     '0'     |     '1'     | ... |     '5'     |  P   |
 |  R   |     '1'     |     '0'     | ... |     '9'     |  P   |
 
-- return packet's order is same as command packet's order
-
-: multi registers write
+Table: multi registers write
 
 | head | register(1) | register data (1) | register(2) | register data (2) | ... | register(n) | register data (n) | tail |
 |:----:|:-----------:|:-----------------:|:-----------:|:-----------------:|:---:|:-----------:|:-----------------:|:----:|
 |  W   |     '0'     |     0x\_A \_A     |     '1'     |     0x\_A \_B     | ... |     '5'     |     0x\_A \_D     |  P   |
 |  W   |     '1'     |     0x\_A \_A     |     '0'     |     0x\_A \_B     | ... |     '9'     |     0x\_A \_D     |  P   |
-
-- return packet's order is same as command packet's order
+<!--  -->
 
 | register | name in python | purpose                              |
 |:--------:|:--------------:|:-------------------------------------|
@@ -363,16 +373,20 @@ This is a subset of [R/W commands](#internal-registers); only access GPIO's stat
 |             |         | 1: writes data to the pin                                            |
 |             |         | 0: do nothing                                                        |
 
-| register 3  | command | GPIO0_CONF                                                                                    |
+`doc/Out/register3.tmd`{.include}
+
+<!-- | register 3  | command | GPIO0_CONF                                                                                    |
 |:-----------:|:-------:|:----------------------------------------------------------------------------------------------|
 | [7\.\.\.0\] |    R    | Reads each pin's Input/Output conditions:                                                     |
 |             |         | 1 = the pin is set to output                                                                  |
 |             |         | 0 = the pin is set to input with internal pullup                                              |
 |             |    W    | Sets each pin's Input/Output configurations:                                                  |
 |             |         | 1: sets the pin to an Output. output level is set by corresponding bit of GPIO0_STAT register |
-|             |         | 0: sets the pin to an Input with internal pull-up connected                                   |
+|             |         | 0: sets the pin to an Input with internal pull-up connected                                   | -->
 
-| register 4  | command | GPIO1_CONF                                                                                    |
+`doc/Out/register4.tmd`{.include}
+
+<!-- | register 4  | command | GPIO1_CONF                                                                                    |
 |:-----------:|:-------:|:----------------------------------------------------------------------------------------------|
 |             |         | **if GPIO1 is not enabled, access to this register will be ignored**                          |
 | [7\.\.\.0\] |    R    | Reads each pin's Input/Output conditions:                                                     |
@@ -380,9 +394,11 @@ This is a subset of [R/W commands](#internal-registers); only access GPIO's stat
 |             |         | 0: the pin is set to input with internal pullup                                               |
 |             |    W    | Sets each pin's Input/Output configurations:                                                  |
 |             |         | 1: sets the pin to an Output. output level is set by corresponding bit of GPIO1_STAT register |
-|             |         | 0: sets the pin to an Input with internal pull-up connected                                   |
+|             |         | 0: sets the pin to an Input with internal pull-up connected                                   | -->
 
-| register 5  | command | I2C_CONF                                                                                                    |
+`doc/Out/register5.tmd`{.include}
+
+<!-- | register 5  | command | I2C_CONF                                                                                                    |
 |:-----------:|:-------:|:------------------------------------------------------------------------------------------------------------|
 | [7\.\.\.6\] |   R/W   | Read/Write clock configuration of I2C1                                                                      |
 |             |         | 11: I2C1 is set to operate in 800kHz clock                                                                  |
@@ -403,7 +419,7 @@ This is a subset of [R/W commands](#internal-registers); only access GPIO's stat
 |             |         | 11: I2C4 is set to operate in 400kHz clock                                                                  |
 |             |         | 10: I2C4 is set to operate in 300kHz clock                                                                  |
 |             |         | 01: I2C4 is set to operate in 200kHz clock                                                                  |
-|             |         | 00: I2C4 is set to operate in 100kHz clock                                                                  |
+|             |         | 00: I2C4 is set to operate in 100kHz clock                                                                  | -->
 
 | register 6  | command | SPI_CONF                                  |
 |:-----------:|:-------:|:------------------------------------------|
