[ DOC ] fix section 1

--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -8,30 +8,31 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 This is a tiny UART-I2C converter software/hardware project using mbed conpatible microcontrollers.
 The module converts UART command packets into I2C/SPI protocol or GPIO to read/write with
 configurable pull-up/pull-down modes. -->
+## プロジェクトディレクトリツリー
+```
+(プロジェクトルート)
+│
+├── doc                （ドキュメントフォルダ）
+│     └── data        （スクリーンショットなど）
+├── gui                （GUIビルド用pythonソースコードとQt4プロジェクトファイル）
+├── mbed               （ファームウェアソースコード（mbed用））
+├── pcb                （tinyI2Cハードウェアの設計ファイル）
+│     └── tinyI2C_P   （ガーバデータ）
+└── python             （pythonライブラリ）
+```
 
 ## 特徴
+<!-- - the "FTDI" USB-UART cable to connect to host PC; from PC the module look only an USB-Serial port
+- up to 115200 boudrate UART to communicate
+- up to 4 channel I2C ports with selectable speed
+- one SPI port with 8/16 bits word, also selectable speed
+- up to 2 x 8bit, General Purpose IO ports -->
 - FTDI^[TODO: FTDIへのリンク] のUSBシリアル変換ケーブル^[TODO: TinyI2Cのみ]
   またはmbedコントローラでホストのPCにつなぎます。PCからはただのUSBシリアルポートに見えます。
     - 最大115200ボーのUART通信をサポート
-<!-- - the "FTDI" USB-UART cable to connect to host PC; from PC the module look only an USB-Serial port
-    - up to 115200 boudrate UART to communicate -->
 - 最大４チャネルのI2Cチャネルを持ち、それぞれのクロックスピードを独立に変更できます。
-<!-- - up to 4 channel I2C ports with selectable speed -->
 - ８または１６ビット長のSPIポートをひとつ持ち、クロックスピードを変更できます。
-<!-- - one SPI port with 8/16 bits word, also selectable speed -->
 - 最大２つの８ビット汎用IOポート
-<!-- - up to 2 x 8bit, General Purpose IO ports -->
-- ```
-(プロジェクトルート)
-├── doc（ドキュメントフォルダ）
-│   └── data（スクリーンショットなど）
-├── gui（GUIビルド用pythonソースコードとQt4プロジェクトファイル）
-├── mbed（ファームウェアソースコード（mbed用））
-├── pcb（tinyI2Cハードウェアの設計ファイル）
-│   └── tinyI2C_P（ガーバデータ）
-└── python（pythonライブラリ）
-```
-
 <!-- - tinyI2C       <-- root
     - gui       <-- PyQt4 based GUI source codes
     - mbed      <-- mbed source codes
@@ -77,10 +78,9 @@ configurable pull-up/pull-down modes. -->
 3. (Windows only) if you use LpcXpresso 824 then install [mbed Serial port driver](http://developer.mbed.org/handbook/Windows-serial-configuration) -->
 
 ## 使い方
-1. mbedマイコンにファームウェアを書き込む
 <!-- ### コンソールから使う場合 -->
-1. pythonコンソールを起動し、ライブラリをインポートする
-<!-- 2. ![TODO: console image]() -->
+1. mbedマイコンにファームウェアを書き込む
+1. pythonコンソールを起動し、ライブラリをインポートする<!-- 2. ![TODO: console image]() -->
 1. **これでもう使えます！**
 
 <!--
@@ -153,7 +153,7 @@ $ dist/TinyI2C
 
 +------------------------------------------------------------------------------+
 |これらのコマンド文字とパケットの構造はNXP社のインタフェースIC **`SC18IM700`** |
-|の仕様<sub>~~をパクっt~~</sub> に ___強く___ インスパイアされています。       |
+|の仕様<sub>~~をパクっt~~</sub>に ___強く___ インスパイアされています。        |
 +------------------------------------------------------------------------------+
 
 <!-- # Command set and protocol
@@ -171,6 +171,18 @@ character there are several choices but ending(`tail`) is always `'P'`, 0x50 in 
   "command is not implemented" return packet.
 - if valid head found it checks `plength - 2` which is actual data packet length.
     - if you send an invalid packet, the device returns "bad packet" return packet.
+- コマンドパケットの開始/終了には予約されている文字を1文字ずつ使います。パケットの
+先頭文字(**`head`**)には何種類かありますが終端(**`tail`**)は常にアスキーの **`P`** または16進の
+**`0x50`** を用います。
+    - 先頭文字なしで **`P`** を送ると、現在選択されているI2Cバスで
+    （スタートコンディション動作を起こさずに）ストップコンディション動作を行い、
+    **"ok"** パケットが返却されます。
+- **`tinyI2C`** モジュールはパケットを受けとるUARTポートに終端文字が送られてくるのを
+(永久に)監視し続け、送られると最初にパケット文字列の長さ(`plength`)を測ります。
+次に先頭文字がいずれかのコマンド文字と一致するか確認します。
+    - 先頭文字が有効なコマンド文字のいずれにも該当しない時は **"command is not implemented"**
+    パケットが返却されます。
+
 
 ## I2C
 ### `'S'` 0x53 I2C-bus START
