[ DOC ] fix sections 1 and 2
Section1:
- add demo program usage
Section2:
- Basic protocol description
- I2C command packet descriptions
-- S/P
-- C
- fix other tables

--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -102,7 +102,11 @@ configurable pull-up/pull-down modes. -->
     * check PinOut for your usage! ![](TinyI2C_PinOut.png) -->
 
 ## デモプログラム
-コンソールでpythonディレクトリに移動して **`python test.py`** を試してみてください。
+コンソールでpythonディレクトリに移動して **`$ python test.py`{.sh}** を試してみてください。
+
+```
+usage: test.py [-h] [--port PORT] [--baud BAUD]
+```
 <!-- # Demo
   try `python/test.py` -->
 
@@ -153,14 +157,15 @@ $ dist/TinyI2C
 
 +------------------------------------------------------------------------------+
 |これらのコマンド文字とパケットの構造はNXP社のインタフェースIC **`SC18IM700`** |
-|の仕様<sub>~~をパクっt~~</sub>に ___強く___ インスパイアされています。        |
+|の仕様<sub>~~をパクっt~~</sub>に**_強く_**インスパイアされています。        |
 +------------------------------------------------------------------------------+
 
+## 基本的な仕様
 <!-- # Command set and protocol
 - _this command character as well as packet structure is inspired(some copied) from
 NXP Semiconductor's UART-I2C converter/controller, named **SC18IM700**._ -->
 
-- the command packet starts/ends with few number of characters: for starting(`head`)
+<!-- - the command packet starts/ends with few number of characters: for starting(`head`)
 character there are several choices but ending(`tail`) is always `'P'`, 0x50 in hex.
     - if only sending 'P', `tinyI2C` makes stop condition pulse (**without start condition**)
   on currently selected I2C bus and returns "ok" return packet.
@@ -170,34 +175,55 @@ character there are several choices but ending(`tail`) is always `'P'`, 0x50 in 
     - if it does not match with any of valid `head` the device returns
   "command is not implemented" return packet.
 - if valid head found it checks `plength - 2` which is actual data packet length.
-    - if you send an invalid packet, the device returns "bad packet" return packet.
+    - if you send an invalid packet, the device returns "bad packet" return packet. -->
 - コマンドパケットの開始/終了には予約されている文字を1文字ずつ使います。パケットの
 先頭文字(**`head`**)には何種類かありますが終端(**`tail`**)は常にアスキーの **`P`** または16進の
 **`0x50`** を用います。
     - 先頭文字なしで **`P`** を送ると、現在選択されているI2Cバスで
     （スタートコンディション動作を起こさずに）ストップコンディション動作を行い、
     **"ok"** パケットが返却されます。
+- **`head/tail`** 以外のデータはすべて1バイトを2バイトに分割して送信します。
+  分割されたそれぞれの4ビットはLSBに割当てます。
+  各MSBは0x03~0x0Fの任意の4ビットをマスクとして加えます。
+    - 例：マスクを0x30として0x**A5** → 0x3**A** 0x3**5**
+    - _0x30をマスクにするとアスキー文字列として送ることができます。_
 - **`tinyI2C`** モジュールはパケットを受けとるUARTポートに終端文字が送られてくるのを
 (永久に)監視し続け、送られると最初にパケット文字列の長さ(`plength`)を測ります。
 次に先頭文字がいずれかのコマンド文字と一致するか確認します。
-    - 先頭文字が有効なコマンド文字のいずれにも該当しない時は **"command is not implemented"**
-    パケットが返却されます。
+    - 先頭文字が無効な場合は **"command is not implemented"** パケットが返却されます。
+    - 先頭文字が有効な場合は有効文字列長(`plength - 2`：パケット長から先頭と終端
+      の2文字を引いた長さ)を確認します。
+        - 残念ながら文字列がそのコマンドの最低文字列長に満たない場合は **"bad packet"**
+          パケットが返却されます。
 
 
-## I2C
+## I2Cバス操作コマンド
 ### `'S'` 0x53 I2C-bus START
 ### `'P'` 0x50 I2C-bus STOP, end of packet
-- the protocol starts from `'S'`, which makes start condition on I2C bus, followed by 7bit I2C slave address and read(1)/write(0) command bit and,
+<!-- - the protocol starts from `'S'`, which makes start condition on I2C bus, followed by 7bit I2C slave address and read(1)/write(0) command bit and,
   - to *Write* data into slave device: send data length to write(1~255) and actual data
   - to *Read* data from slave device: send data length to read(1~255)
 - ends with sending `'P'` which makes stop condition on the bus
 - return packet depends on command:
   - first, `"ACK"` or `"NAK"` depends on response from slave
   - *Read*: read data in hex sting (0xAA -> "AA") separated by ',' and ends by `ok`
-  - *Write*: `ok`
+  - *Write*: `ok` -->
+1. プロトコルはアスキーの **`S`** で開始され、同時にI2Cバスにスタートコンディションを発行します。
+  その直後に7ビットのI2Cスレーブアドレスと`R(1)`または`W(0)`のコマンドビットが続きます。\
+  このあと、
+    - コマンドビットが`W(0)`（書込み）：送られるデータの長さ（1~255）と実際のデータを送る
+    - コマンドビットが`R(1)`（読出し）：読みだすデータの長さ（1~255）を送る
+1. パケットは **`P`** で終端します。このときI2Cバスにストップコンディションを発行します。
+1. 返却パケットはコマンドビットの内容に依存します。
+    - 常に最初はスレーブの応答によって`ACK`または`NAK`が返ります。\
+      その後、
+        - コマンドビットが`W(0)`（書込み）：**`ok`** が返ります
+        - コマンドビットが`R(1)`（読出し）：8ビットごとに16進数の文字列と
+          終端の **`ok`** がコンマ区切りで返ります
 
-#### Write only case
-Table: command packet - write 4 bytes to slave at 0x80(8bit)
+#### 書込みのみを行う例
+Table: _8bit_ スレーブアドレス0x80に4バイト書込むコマンドパケット例
+<!-- Table: command packet - write 4 bytes to slave at 0x80(8bit) -->
 
 `doc/Out/commandSandP.tmd`{.include}
 
@@ -207,76 +233,81 @@ Table: command packet - write 4 bytes to slave at 0x80(8bit)
 | `'S'` |      `'80'`      |   `'04'`    |              `'=>:=;>:?'`               | `'P'` |
 | 0x53  |    0x38 0x30     |  0x30 0x34  | 0x3D 0x3E 0x3A 0x3D 0x3B 0x3E 0x3A 0x3F | 0x50  | -->
 
-Table: return packet
+<!-- Table: return packet -->
+Table: 返却パケット
 
 | result | head  | delimiter | tail |
 |:------:|:-----:|:---------:|:----:|
 | sucess | "ACK" |     ,     | "ok" |
 |  fail  | "NAK" |     ,     | "ok" |
 
-#### Read only case
-Table: command packet - read 4 bytes from slave at 0x80(8bit)
+#### 読出しのみを行う例
+<!-- Table: command packet - read 4 bytes from slave at 0x80(8bit) -->
+Table: _8bit_ スレーブアドレス0x80から4バイト読出すコマンドパケット例
 
 | head | slave address(R\) | data length | tail |
 |:----:|:-----------------:|:-----------:|:----:|
-|  S   |     0x\_8 \_1     |  0x\_0 \_4  |  P   |
+|  S   |      0x?8 ?1      |   0x?0 ?4   |  P   |
 
-Table: return packet
+<!-- Table: return packet -->
+Table: 返却パケット
 
-| result | head  | delimiter |               data                | tail |
-|:------:|:-----:|:---------:|:---------------------------------:|:----:|
-| sucess | "ACK" |     ,     | actual data: "AA","BB","CC","DD", | "ok" |
-|  fail  | "NAK" |     ,     | dummy data: "C4","FE","E0","CA",  | "ok" |
+| result |  head   | delimiter |                data                 | tail |
+|:------:|:-------:|:---------:|:-----------------------------------:|:----:|
+| sucess | `"ACK"` |     ,     | actual data: `"AA","BB","CC","DD",` | "ok" |
+|  fail  | `"NAK"` |     ,     | dummy data: `"C4","FE","E0","CA",`  | "ok" |
 
-#### Write and Read case
-Table: command packet - write and read 4 bytes to/from slave at 0x80(8bit)
+#### 書き込んだ後読み出す例
+<!-- Table: command packet - write and read 4 bytes to/from slave at 0x80(8bit) -->
+Table: スレーブアドレス0x80に4バイトずつ書込み・読出しを行うコマンドパケット例
 
 `doc/Out/commandSandP_SSP.tmd`{.include}
 
 <!-- | head | slave address(W) | data length |       binary data to write       | repeated start | slave address(R\) | data length | tail |
 |:----:|:----------------:|:-----------:|:--------------------------------:|:--------------:|:-----------------:|:-----------:|:----:|
-|  S   |    0x\_8 \_0     |  0x\_0 \_4  | 0x_D \_E \_A \_D \_B \_E \_A \_F |       S        |     0x\_8 \_1     |  0x\_0 \_4  |  P   | -->
+|  S   |    0x?8 ?0     |  0x?0 ?4  | 0x_D ?E ?A ?D ?B ?E ?A ?F |       S        |     0x?8 ?1     |  0x?0 ?4  |  P   | -->
 
-Table: return packet
+<!-- Table: return packet -->
+Table: 返却パケット
 
-| result | head  | delimiter |               data                | tail |
-|:------:|:-----:|:---------:|:---------------------------------:|:----:|
-| sucess | "ACK" |     ,     | actual data: "AA","BB","CC","DD", | "ok" |
-|  fail  | "NAK" |     ,     | dummy data: "C4","FE","E0","CA",  | "ok" |
+| result | head  | delimiter |                data                 | tail |
+|:------:|:-----:|:---------:|:-----------------------------------:|:----:|
+| sucess | "ACK" |     ,     | actual data: `"AA","BB","CC","DD",` | "ok" |
+|  fail  | "NAK" |     ,     | dummy data:  `"C4","FE","E0","CA",` | "ok" |
 
 ### `'C'` 0x43 change channel
-You can select I2C channel by sending `'C'` and channel number `'0'`to`'3'` with `tail` char.
+<!-- You can select I2C channel by sending `'C'` and channel number `'0'`to`'3'` with `tail` char. -->
+**`C`** に続いてチャネル番号と終端を送るとI2Cバスを変更できます。チャネル番号は
+アスキー文字の'0'~'3'です。
+- _サポートされていないチャネルを選択すると強制的に**チャネル0**が選択されます。_
 
-| head | channel | tail |
-|:----:|:-------:|:----:|
-|  C   |   '0'   |  P   |
-|  C   |   '1'   |  P   |
-|  C   |   '2'   |  P   |
-|  C   |   '3'   |  P   |
+| head | channel | tail |            note            |
+|:----:|:-------:|:----:|:--------------------------:|
+|  C   |   '0'   |  P   |                            |
+|  C   |   '1'   |  P   |     LPC11U35未サポート     |
+|  C   |   '2'   |  P   | LPC11U35/LPC1768未サポート |
+|  C   |   '3'   |  P   | LPC11U35/LPC1768未サポート |
 
-## SPI
+## SPIバス操作コマンド
 ### `'E'` 0x45 SPI transfer start
 
 Table: minimum plength = 8
 
 | head | data length(W) | data length(R\) | binary data to write | tail |
 |:----:|:--------------:|:---------------:|:--------------------:|:----:|
-|  E   |   0x\_0 \_1    |    0x\_0 \_0    |      0x\_D \_E       |  P   |
-
+|  E   |    0x?0 ?1     |     0x?0 ?0     |       0x?D ?E        |  P   |
 
 Table: minimum plength = 10 (16bit)
 
 | head | data length(W) | data length(R\) | binary data to write | tail |
 |:----:|:--------------:|:---------------:|:--------------------:|:----:|
-|  E   |   0x\_0 \_1    |    0x\_0 \_0    |   0x_D \_E \_A \_D   |  P   |
-
+|  E   |    0x?0 ?1     |     0x?0 ?0     |    0x?D ?E ?A ?D     |  P   |
 
 Table: write and read
 
-| head | data length(W) | data length(R\) |       binary data to write       | tail |
-|:----:|:--------------:|:---------------:|:--------------------------------:|:----:|
-|  E   |   0x\_0 \_4    |    0x\_0 \_4    | 0x_D \_E \_A \_D \_B \_E \_A \_F |  P   |
-
+| head | data length(W) | data length(R\) |   binary data to write    | tail |
+|:----:|:--------------:|:---------------:|:-------------------------:|:----:|
+|  E   |    0x?0 ?4     |     0x?0 ?4     | 0x?D ?E ?A ?D ?B ?E ?A ?F |  P   |
 <!--
 ~~~
 /*
@@ -289,7 +320,7 @@ Table: write and read
 ~~~
 -->
 
-## GPIO
+## GPIO操作コマンド
 This is a subset of [R/W commands](#internal-registers); only access GPIO's status registers.
 
 ### `'I'` 0x49 read GPIO port register
@@ -300,10 +331,11 @@ This is a subset of [R/W commands](#internal-registers); only access GPIO's stat
 |  I   | '0'  |  P   |
 |  I   | '1'  |  P   |
 <!--  -->
-| head | GPIO |   data    | tail |
-|:----:|:----:|:---------:|:----:|
-|  O   | '0'  | 0x\_A \_A |  P   |
-|  O   | '1'  | 0x\_A \_A |  P   |
+
+| head | GPIO |  data   | tail |
+|:----:|:----:|:-------:|:----:|
+|  O   | '0'  | 0x?A ?A |  P   |
+|  O   | '1'  | 0x?A ?A |  P   |
 <!--  -->
 | register | name in python | purpose          |
 |:--------:|:--------------:|:-----------------|
@@ -317,7 +349,7 @@ This is a subset of [R/W commands](#internal-registers); only access GPIO's stat
 ~~~
 -->
 
-## Internal registers
+## 内部レジスタ操作コマンド
 ### `'R'` 0x52 read internal register
 ### `'W'` 0x57 write to internal register
 
@@ -345,8 +377,8 @@ Table: multi registers write
 
 | head | register(1) | register data (1) | register(2) | register data (2) | ... | register(n) | register data (n) | tail |
 |:----:|:-----------:|:-----------------:|:-----------:|:-----------------:|:---:|:-----------:|:-----------------:|:----:|
-|  W   |     '0'     |     0x\_A \_A     |     '1'     |     0x\_A \_B     | ... |     '5'     |     0x\_A \_D     |  P   |
-|  W   |     '1'     |     0x\_A \_A     |     '0'     |     0x\_A \_B     | ... |     '9'     |     0x\_A \_D     |  P   |
+|  W   |     '0'     |     0x?A ?A     |     '1'     |     0x?A ?B     | ... |     '5'     |     0x?A ?D     |  P   |
+|  W   |     '1'     |     0x?A ?A     |     '0'     |     0x?A ?B     | ... |     '9'     |     0x?A ?D     |  P   |
 <!--  -->
 
 | register | name in python | purpose                              |
@@ -481,8 +513,8 @@ SPI_CONF = '6',
 ~~~
 "R| '0'| P"
 "R| '0'| '1'| ...| P"
-"W| '0' 0x_a \_A| P"
-"W| '0' 0x_a \_A| '1' 0x_b \_B| ...| P"
+"W| '0' 0x_a ?A| P"
+"W| '0' 0x_a ?A| '1' 0x_b ?B| ...| P"
 ~~~
 -->
 # Contribution by
