--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -375,10 +375,12 @@ Table: multi registers read
 
 Table: multi registers write
 
-| head | register(1) | register data (1) | register(2) | register data (2) | ... | register(n) | register data (n) | tail |
+`doc/Out/commandRandW_multi.tmd`{.include}
+
+<!-- | head | register(1) | register data (1) | register(2) | register data (2) | ... | register(n) | register data (n) | tail |
 |:----:|:-----------:|:-----------------:|:-----------:|:-----------------:|:---:|:-----------:|:-----------------:|:----:|
 |  W   |     '0'     |     0x?A ?A     |     '1'     |     0x?A ?B     | ... |     '5'     |     0x?A ?D     |  P   |
-|  W   |     '1'     |     0x?A ?A     |     '0'     |     0x?A ?B     | ... |     '9'     |     0x?A ?D     |  P   |
+|  W   |     '1'     |     0x?A ?A     |     '0'     |     0x?A ?B     | ... |     '9'     |     0x?A ?D     |  P   | -->
 <!--  -->
 
 | register | name in python | purpose                              |
