--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -1,6 +1,6 @@
 # TinyI2C プロジェクトの概要
 
-___TinyI2C___ はmbed^TM^ 互換のマイクロコントローラで小さなUART-I2C変換モジュールの
+___TinyI2C___ はmbed^TM^ 互換のマイクロコントローラで小さなUART-I^2^C変換モジュールの
 ハードウェアとソフトウェアを設計するプロジェクトです。**`TinyI2C`** モジュールは
 UART^[https://ja.wikipedia.org/wiki/UART] で送られるコマンドパケットを変換し
 I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定可能なGPIOの読み書きを行います。
@@ -30,7 +30,7 @@ configurable pull-up/pull-down modes. -->
 - FTDI^[TODO: FTDIへのリンク] のUSBシリアル変換ケーブル^[TODO: TinyI2Cのみ]
   またはmbedコントローラでホストのPCにつなぎます。PCからはただのUSBシリアルポートに見えます。
     - 最大115200ボーのUART通信をサポート
-- 最大４チャネルのI2Cチャネルを持ち、それぞれのクロックスピードを独立に変更できます。
+- 最大４チャネルの I^2^Cチャネルを持ち、それぞれのクロックスピードを独立に変更できます。
 - ８または１６ビット長のSPIポートをひとつ持ち、クロックスピードを変更できます。
 - 最大２つの８ビット汎用IOポート
 <!-- - tinyI2C       <-- root
@@ -179,7 +179,7 @@ character there are several choices but ending(`tail`) is always `'P'`, 0x50 in 
 - コマンドパケットの開始/終了には予約されている文字を1文字ずつ使います。パケットの
 先頭文字(**`head`**)には何種類かありますが終端(**`tail`**)は常にアスキーの **`P`** または16進の
 **`0x50`** を用います。
-    - 先頭文字なしで **`P`** を送ると、現在選択されているI2Cバスで
+    - 先頭文字なしで **`P`** を送ると、現在選択されている I^2^Cバスで
     （スタートコンディション動作を起こさずに）ストップコンディション動作を行い、
     **"ok"** パケットが返却されます。
 - **`head/tail`** 以外のデータはすべて1バイトを2バイトに分割して送信します。
@@ -197,9 +197,9 @@ character there are several choices but ending(`tail`) is always `'P'`, 0x50 in 
           パケットが返却されます。
 
 
-## I2Cバス操作コマンド
-### `'S'` 0x53 I2C-bus START
-### `'P'` 0x50 I2C-bus STOP, end of packet
+## I^2^Cバス操作コマンド
+### `'S'` 0x53 I^2^C-bus START
+### `'P'` 0x50 I^2^C-bus STOP, end of packet
 <!-- - the protocol starts from `'S'`, which makes start condition on I2C bus, followed by 7bit I2C slave address and read(1)/write(0) command bit and,
   - to *Write* data into slave device: send data length to write(1~255) and actual data
   - to *Read* data from slave device: send data length to read(1~255)
@@ -208,12 +208,12 @@ character there are several choices but ending(`tail`) is always `'P'`, 0x50 in 
   - first, `"ACK"` or `"NAK"` depends on response from slave
   - *Read*: read data in hex sting (0xAA -> "AA") separated by ',' and ends by `ok`
   - *Write*: `ok` -->
-1. プロトコルはアスキーの **`S`** で開始され、同時にI2Cバスにスタートコンディションを発行します。
-  その直後に7ビットのI2Cスレーブアドレスと`R(1)`または`W(0)`のコマンドビットが続きます。\
+1. プロトコルはアスキーの **`S`** で開始され、同時に I^2^Cバスにスタートコンディションを発行します。
+  その直後に7ビットの I^2^Cスレーブアドレスと`R(1)`または`W(0)`のコマンドビットが続きます。\
   このあと、
     - コマンドビットが`W(0)`（書込み）：送られるデータの長さ（1~255）と実際のデータを送る
     - コマンドビットが`R(1)`（読出し）：読みだすデータの長さ（1~255）を送る
-1. パケットは **`P`** で終端します。このときI2Cバスにストップコンディションを発行します。
+1. パケットは **`P`** で終端します。このとき I^2^Cバスにストップコンディションを発行します。
 1. 返却パケットはコマンドビットの内容に依存します。
     - 常に最初はスレーブの応答によって`ACK`または`NAK`が返ります。\
       その後、
@@ -277,7 +277,7 @@ Table: 返却パケット
 
 ### `'C'` 0x43 change channel
 <!-- You can select I2C channel by sending `'C'` and channel number `'0'`to`'3'` with `tail` char. -->
-**`C`** に続いてチャネル番号と終端を送るとI2Cバスを変更できます。チャネル番号は
+**`C`** に続いてチャネル番号と終端を送ると I^2^Cバスを変更できます。チャネル番号は
 アスキー文字の'0'~'3'です。
 - _サポートされていないチャネルを選択すると強制的に**チャネル0**が選択されます。_
 
@@ -390,7 +390,7 @@ Table: multi registers write
 |    2     |   GPIO1_STAT   | status of GPIO 1                     |
 |    4     |   GPIO1_CONF   | GPIO 0 IO configuration              |
 |    3     |   GPIO0_CONF   | GPIO 1 IO configuration              |
-|    5     |    I2C_CONF    | I2C channel 1~4 speed configuration  |
+|    5     |    I2C_CONF    | I^2^C channel 1~4 speed configuration  |
 |    6     |    SPI_CONF    | SPI speed and polarity configuration |
 
 | register 0  | command | CHIP_ID                    |
